# autogen-chat

./: README.md  pyproject.toml  requirements.dev.txt  requirements.txt
autogen_chat/: hosting.py  main.py
autogen_chat/protocols/: i_azure_openai_service.py
autogen_chat/services/: azure_openai_service.py
autogen_chat/tools/: tools.py
tests/autogen_chat/services/: test_azure_openai_service.py
