[tool.poetry]
name = "autogen-chat"
version = "0.1.0"
description = ""
authors = ["Dennis Seah <dennis.seah@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0 <3.13.0"
azure-core = "^1.32.0"
azure-identity = "^1.19.0"
python-dotenv = "^1.0.1"
lagom = "^2.7.5"
autogen-agentchat = "^0.4.0"
autogen-ext = "^0.4.0"
tiktoken = "^0.8.0"
openai = "^1.59.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
pyright = "^1.1.391"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["typings"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["typings", ".venv", ".vscode", ".git"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "autogen_chat/hosting.py",
    "autogen_chat/protocols/*",
    "autogen_chat/main.py",
    "autogen_chat/tools/*.py"
]